update｜components.html｜確認用グリッドを追加

--- a/components.html
+++ b/components.html
@@ -57,6 +57,20 @@
         <h1 class="detail-title__heading">北谷養盛園</h1>
       </div>
       <!-- index-title / end -->
+      <div class="row">
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+      </div>
       <!-- article-heading / start -->
       <h2 class="article-heading offset-4 col-6">瀬戸内で盆栽をつくるということ</h2>
       <!-- article-heading / end -->
