add｜people-title｜PC版を追加

--- a/components.html
+++ b/components.html
@@ -56,7 +56,37 @@
         <h2 class="detail-title__category-title">香川県の盆栽園</h2>
         <h1 class="detail-title__heading">北谷養盛園</h1>
       </div>
-      <!-- index-title / end -->
+      <!-- detail-title / end -->
+      <div class="row">
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+      </div>
+      <!-- people-title / start -->
+      <div class="people-title offset-3 col-9">
+        <h2 class="people-title__category-title">香川県の盆栽園</h2>
+      </div>
+      <div class="people-title__box offset-3 col-8">
+        <div class="people-title__title-wrapper">
+          <div class="people-title__title-inner">
+            <h1 class="people-title__article-title">瀬戸内の気候と人の手でつくる<br>四代目の盆栽</h1>
+            <p class="people-title__garden-name">花澤明春園／花澤 太郎</p>
+          </div>
+        </div>
+        <figure class="people-title__images-wrapper">
+          <img src="https://placehold.jp/800x600.png">
+        </figure>
+      </div>
+      <!-- people-title / end -->
       <div class="row">
         <div class="col-1">col-1</div>
         <div class="col-1">col-1</div>
