update｜peoople-title｜SP版styleを追加

--- a/components.html
+++ b/components.html
@@ -78,12 +78,13 @@
       <div class="people-title__box offset-3 col-8">
         <div class="people-title__title-wrapper">
           <div class="people-title__title-inner">
-            <h1 class="people-title__article-title">瀬戸内の気候と人の手でつくる<br>四代目の盆栽</h1>
+            <h1 class="people-title__article-title">瀬戸内の気候と人の手でつくる<br class="people-title__br--pc">四代目の盆栽</h1>
             <p class="people-title__garden-name">花澤明春園／花澤 太郎</p>
           </div>
         </div>
         <figure class="people-title__images-wrapper">
-          <img src="https://placehold.jp/800x600.png">
+          <img class="people-title__images--pc" src="https://placehold.jp/800x600.png">
+          <img class="people-title__images--sp" src="https://placehold.jp/375x435.png">
         </figure>
       </div>
       <!-- people-title / end -->
