add｜pickup-title｜PC用追加

--- a/components.html
+++ b/components.html
@@ -102,6 +102,38 @@
         <div class="col-1">col-1</div>
         <div class="col-1">col-1</div>
       </div>
+      <!-- pickup-title / start -->
+      <!-- <div class="pickup-title offset-3 col-9">
+        <h2 class="pickup-title__category-title">香川県の盆栽園</h2>
+      </div> -->
+      <div class="pickup-title__box offset-3 col-10">
+        <div class="pickup-title__title-wrapper">
+          <div class="pickup-title__title-inner">
+            <h1 class="pickup-title__article-title">瀬戸内の気候と人の手でつくる<br class="pickup-title__br--pc">四代目の盆栽</h1>
+            <p class="pickup-title__garden-name">花澤明春園／花澤 太郎</p>
+            <p class="pickup-title__garden-name">viewmore</p>
+          </div>
+        </div>
+        <figure class="pickup-title__images-wrapper">
+          <img class="pickup-title__images--pc" src="https://placehold.jp/800x600.png">
+          <img class="pickup-title__images--sp" src="https://placehold.jp/375x435.png">
+        </figure>
+      </div>
+      <!-- pickup-title / end -->
+      <div class="row">
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+        <div class="col-1">col-1</div>
+      </div>
       <!-- article-heading / start -->
       <h2 class="article-heading offset-4 col-6">瀬戸内で盆栽をつくるということ</h2>
       <!-- article-heading / end -->
@@ -553,8 +585,8 @@
         <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_facebook.svg" src="#"></a>
         <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_twitter.svg" src="#"></a>
       </div>
-      <p class="footer__pagetop"><a href="#">PAGE TOP</a></p>
-      <p class="footer__copyright">© 2019 BON - BONSAI TO HITO - ALL RIGHTS RESERVED.</p>
+      <p class="footer__pagetop"><a href="#">page top</a></p>
+      <p class="footer__copyright">© 2019 bon - bonsai to hito - all rights reserved.</p>
     </footer>
   </div>
 <script src="./dist/js/main.min.js"></script>
