add｜hanazawa-takahito｜ページの追加

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
-    <p><a href="./components.html">component一覧</a></p>
+    <ul style="padding: 50px; ">
+      <li style="margin-bottom: 20px;"><a href="./components.html">component一覧</a></li>
+      <li style="margin-bottom: 20px;"><a href="./bonsai-and-people/hanazawa-takahito.html">花澤明春園／花澤登人さん</a></li>
+    </ul>
 </body>
 </html>
