--- a/components.html
+++ b/components.html
@@ -363,50 +363,53 @@
       </div>
       <!-- people-link-box / start -->
       <ul class="people-link-box offset-3 col-8">
-        <li class="people-link-box__wrapper">
-          <a class="people-link-box__link-wrapper" href="#">
-            <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
-            <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-          </a>
-          <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
-        </li>
-        <li class="people-link-box__wrapper">
-          <a class="people-link-box__link-wrapper" href="#">
-            <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
-            <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-          </a>
-          <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
-        </li>
-        <li class="people-link-box__wrapper">
-          <a class="people-link-box__link-wrapper" href="#">
-            <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
-            <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-          </a>
-          <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
-        </li>
-        <li class="people-link-box__wrapper">
-          <a class="people-link-box__link-wrapper" href="#">
-            <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
-            <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-          </a>
-          <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
-        </li>
-        <li class="people-link-box__wrapper">
-          <a class="people-link-box__link-wrapper" href="#">
-            <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
-            <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-          </a>
-          <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
-        </li>
-        <li class="people-link-box__wrapper">
-          <a class="people-link-box__link-wrapper" href="#">
-            <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
-            <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-          </a>
-          <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
-        </li>
+        <h2 class="people-link-box__area-title">関連記事</h2>
+        <div class="people-link-box__wrapper">
+          <li class="people-link-box__list-wrapper">
+            <a class="people-link-box__link-wrapper" href="#">
+              <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box__list-wrapper">
+            <a class="people-link-box__link-wrapper" href="#">
+              <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box__list-wrapper">
+            <a class="people-link-box__link-wrapper" href="#">
+              <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box__list-wrapper">
+            <a class="people-link-box__link-wrapper" href="#">
+              <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box__list-wrapper">
+            <a class="people-link-box__link-wrapper" href="#">
+              <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+          <li class="people-link-box__list-wrapper">
+            <a class="people-link-box__link-wrapper" href="#">
+              <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
+              <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+            </a>
+            <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+          </li>
+        </div>
       </ul>
-      <!-- people-link-box / start -->
+      <!-- people-link-box / end -->
       <div class="row">
         <div class="col-1">col-1</div>
         <div class="col-1">col-1</div>
@@ -423,46 +426,49 @@
       </div>
       <!-- garden-link-box / start -->
       <ul class="garden-link-box offset-3 col-8">
-        <li class="garden-link-box__wrapper">
-          <a class="garden-link-box__link-wrapper" href="#">
-            <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
-            <h2 class="garden-link-box__garden-name">花澤明春園</h2>
-          </a>
-          <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
-          <div class="garden-link-box__garden-phone-number">087-881-2847</div>
-        </li>
-        <li class="garden-link-box__wrapper">
-          <a class="garden-link-box__link-wrapper" href="#">
-            <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
-            <h2 class="garden-link-box__garden-name">花澤明春園</h2>
-          </a>
-          <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
-          <div class="garden-link-box__garden-phone-number">087-881-2847</div>
-        </li>
-        <li class="garden-link-box__wrapper">
-          <a class="garden-link-box__link-wrapper" href="#">
-            <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
-            <h2 class="garden-link-box__garden-name">花澤明春園</h2>
-          </a>
-          <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
-          <div class="garden-link-box__garden-phone-number">087-881-2847</div>
-        </li>
-        <li class="garden-link-box__wrapper">
-          <a class="garden-link-box__link-wrapper" href="#">
-            <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
-            <h2 class="garden-link-box__garden-name">花澤明春園</h2>
-          </a>
-          <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
-          <div class="garden-link-box__garden-phone-number">087-881-2847</div>
-        </li>
-        <li class="garden-link-box__wrapper">
-          <a class="garden-link-box__link-wrapper" href="#">
-            <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
-            <h2 class="garden-link-box__garden-name">花澤明春園</h2>
-          </a>
-          <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
-          <div class="garden-link-box__garden-phone-number">087-881-2847</div>
-        </li>
+        <h2 class="garden-link-box__area-title">関連記事</h2>
+        <div class="garden-link-box__wrapper">
+          <li class="garden-link-box__list-wrapper">
+            <a class="garden-link-box__link-wrapper" href="#">
+              <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box__garden-phone-number">087-881-2847</div>
+          </li>
+          <li class="garden-link-box__list-wrapper">
+            <a class="garden-link-box__link-wrapper" href="#">
+              <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box__garden-phone-number">087-881-2847</div>
+          </li>
+          <li class="garden-link-box__list-wrapper">
+            <a class="garden-link-box__link-wrapper" href="#">
+              <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box__garden-phone-number">087-881-2847</div>
+          </li>
+          <li class="garden-link-box__list-wrapper">
+            <a class="garden-link-box__link-wrapper" href="#">
+              <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box__garden-phone-number">087-881-2847</div>
+          </li>
+          <li class="garden-link-box__list-wrapper">
+            <a class="garden-link-box__link-wrapper" href="#">
+              <img class="garden-link-box__garden-images" src="https://placehold.jp/430x269.png">
+              <h2 class="garden-link-box__garden-name">花澤明春園</h2>
+            </a>
+            <div class="garden-link-box__garden-address">香川県高松市鬼無町鬼無748-3</div>
+            <div class="garden-link-box__garden-phone-number">087-881-2847</div>
+          </li>
+        </div>
       </ul>
       <!-- garden-link-box / end -->
       <div class="row">
@@ -481,34 +487,37 @@
       </div>
       <!-- product-link-box / start -->
       <ul class="product-link-box offset-3 col-8">
-        <li class="product-link-box__wrapper">
-          <a class="product-link-box__link-wrapper" href="#">
-            <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
-            <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
-          </a>
-            <p class="product-link-box__product-price">売却済み</p>
-        </li>
-        <li class="product-link-box__wrapper">
-          <a class="product-link-box__link-wrapper" href="#">
-            <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
-            <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
-          </a>
-            <p class="product-link-box__product-price">売却済み</p>
-        </li>
-        <li class="product-link-box__wrapper">
-          <a class="product-link-box__link-wrapper" href="#">
-            <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
-            <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
-          </a>
-            <p class="product-link-box__product-price">売却済み</p>
-        </li>
-        <li class="product-link-box__wrapper">
-          <a class="product-link-box__link-wrapper" href="#">
-            <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
-            <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
-          </a>
-            <p class="product-link-box__product-price">売却済み</p>
-        </li>
+        <h2 class="product-link-box__area-title">関連記事</h2>
+        <div class="product-link-box__wrapper">
+          <li class="product-link-box__list-wrapper">
+            <a class="product-link-box__link-wrapper" href="#">
+              <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
+              <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            </a>
+              <p class="product-link-box__product-price">売却済み</p>
+          </li>
+          <li class="product-link-box__list-wrapper">
+            <a class="product-link-box__link-wrapper" href="#">
+              <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
+              <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            </a>
+              <p class="product-link-box__product-price">売却済み</p>
+          </li>
+          <li class="product-link-box__list-wrapper">
+            <a class="product-link-box__link-wrapper" href="#">
+              <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
+              <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            </a>
+              <p class="product-link-box__product-price">売却済み</p>
+          </li>
+          <li class="product-link-box__list-wrapper">
+            <a class="product-link-box__link-wrapper" href="#">
+              <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
+              <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+            </a>
+              <p class="product-link-box__product-price">売却済み</p>
+          </li>
+        </div>
       </ul>
       <!-- product-link-box / end -->
       <div class="row">
