--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -146,109 +146,149 @@
       <p class="article-text offset-4 col-6">取材・文／川村望（あひる社）　撮影／井上美野</p>
       <!-- article-text / end -->
     </article>
-    <aside class="flex contents">
-      <!-- people-link-box / start -->
-      <ul class="people-link-box offset-3 col-8">
-        <li class="people-link-box__wrapper">
-          <a class="people-link-box__link-wrapper" href="#">
-            <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
-            <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-          </a>
-          <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
-        </li>
-        <li class="people-link-box__wrapper">
-          <a class="people-link-box__link-wrapper" href="#">
-            <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
-            <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-          </a>
-          <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
-        </li>
-        <li class="people-link-box__wrapper">
-          <a class="people-link-box__link-wrapper" href="#">
-            <img class="people-link-box__article-images" src="https://placehold.jp/430x269.png">
-            <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
-          </a>
-          <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
-        </li>
-      </ul>
-      <!-- people-link-box / start -->
-      <!-- product-link-box / start -->
-      <ul class="product-link-box offset-3 col-8">
-        <li class="product-link-box__wrapper">
-          <a class="product-link-box__link-wrapper" href="#">
-            <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
-            <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
-          </a>
-            <p class="product-link-box__product-price">売却済み</p>
-        </li>
-        <li class="product-link-box__wrapper">
-          <a class="product-link-box__link-wrapper" href="#">
-            <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
-            <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
-          </a>
-            <p class="product-link-box__product-price">売却済み</p>
-        </li>
-        <li class="product-link-box__wrapper">
-          <a class="product-link-box__link-wrapper" href="#">
-            <img class="product-link-box__product-images" src="https://placehold.jp/430x430.png">
-            <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
-          </a>
-            <p class="product-link-box__product-price">売却済み</p>
-        </li>
-      </ul>
-      <!-- product-link-box / end -->
-      <!-- contents-link-box / start -->
-      <div class="contents-link-box offset-3 col-8">
-        <div class="contents-link-box__wrapper">
-          <div class="contents-link-box__box-wrapper">
-            <div class="contents-link-box__images-wrapper">
-              <a class="contents-link-box__link-wrapper" href="#">
-                <p class="contents-link-box__contents-title">盆栽と人</p>
-                <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+    <aside class="flex aside">
+      <div class="aside__area-wrapper">
+        <!-- people-link-box / start -->
+        <ul class="people-link-box offset-3 col-8">
+          <h2 class="people-link-box__area-title">関連記事</h2>
+          <div class="people-link-box__wrapper">
+            <li class="people-link-box__list-wrapper">
+              <a class="people-link-box__link-wrapper" href="#">
+                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-            </div>
-            <div class="contents-link-box__sumally-wrapper">
-              <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
-            </div>
-          </div>
-          <div class="contents-link-box__box-wrapper">
-            <div class="contents-link-box__images-wrapper">
-              <a class="contents-link-box__link-wrapper" href="#">
-                <p class="contents-link-box__contents-title">盆栽と人</p>
-                <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+            </li>
+            <li class="people-link-box__list-wrapper">
+              <a class="people-link-box__link-wrapper" href="#">
+                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-            </div>
-            <div class="contents-link-box__sumally-wrapper">
-              <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
-            </div>
-          </div>
-        </div>
-        <div class="contents-link-box__wrapper">
-          <div class="contents-link-box__box-wrapper">
-            <div class="contents-link-box__images-wrapper">
-              <a class="contents-link-box__link-wrapper" href="#">
-                <p class="contents-link-box__contents-title">盆栽と人</p>
-                <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+            </li>
+            <li class="people-link-box__list-wrapper">
+              <a class="people-link-box__link-wrapper" href="#">
+                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-            </div>
-            <div class="contents-link-box__sumally-wrapper">
-              <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
-            </div>
-          </div>
-          <div class="contents-link-box__box-wrapper">
-            <div class="contents-link-box__images-wrapper">
-              <a class="contents-link-box__link-wrapper" href="#">
-                <p class="contents-link-box__contents-title">盆栽と人</p>
-                <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+            </li>
+            <li class="people-link-box__list-wrapper">
+              <a class="people-link-box__link-wrapper" href="#">
+                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
               </a>
-            </div>
-            <div class="contents-link-box__sumally-wrapper">
-              <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
-            </div>
+              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+            </li>
+            <li class="people-link-box__list-wrapper">
+              <a class="people-link-box__link-wrapper" href="#">
+                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+              </a>
+              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+            </li>
+            <li class="people-link-box__list-wrapper">
+              <a class="people-link-box__link-wrapper" href="#">
+                <img class="people-link-box__article-images" src="../dist/images/bonsai-and-people/kitadani-ryuichi/pic_garden.png">
+                <h2 class="people-link-box__article-title">瀬戸内の気候と人の手でつくる四代目の盆栽</h2>
+              </a>
+              <div class="people-link-box__garden-name">花澤明春園／花澤 太郎</div>
+            </li>
           </div>
-        </div>
+        </ul>
+        <!-- people-link-box / end -->
+      <div class="aside__area-wrapper">
       </div>
-      <!-- contents-link-box / end -->
+        <!-- product-link-box / start -->
+        <ul class="product-link-box offset-3 col-8">
+          <h2 class="product-link-box__area-title">花澤明春園の盆栽</h2>
+          <div class="product-link-box__wrapper">
+            <li class="product-link-box__list-wrapper">
+              <a class="product-link-box__link-wrapper" href="#">
+                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+              </a>
+                <p class="product-link-box__product-price">売却済み</p>
+            </li>
+            <li class="product-link-box__list-wrapper">
+              <a class="product-link-box__link-wrapper" href="#">
+                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+              </a>
+                <p class="product-link-box__product-price">売却済み</p>
+            </li>
+            <li class="product-link-box__list-wrapper">
+              <a class="product-link-box__link-wrapper" href="#">
+                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+              </a>
+                <p class="product-link-box__product-price">売却済み</p>
+            </li>
+            <li class="product-link-box__list-wrapper">
+              <a class="product-link-box__link-wrapper" href="#">
+                <img class="product-link-box__product-images" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_product_001.png">
+                <h2 class="product-link-box__product-name">加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）加藤益造の盆栽鉢（6号サイズ）</h2>
+              </a>
+                <p class="product-link-box__product-price">売却済み</p>
+            </li>
+          </div>
+        </ul>
+        <!-- product-link-box / end -->
+      </div>
+      <div class="aside__area-wrapper">
+        <!-- contents-link-box / start -->
+        <div class="contents-link-box offset-3 col-8">
+          <div class="contents-link-box__wrapper">
+            <div class="contents-link-box__box-wrapper">
+              <div class="contents-link-box__images-wrapper">
+                <a class="contents-link-box__link-wrapper" href="#">
+                  <p class="contents-link-box__contents-title">盆栽と人</p>
+                  <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+                </a>
+              </div>
+              <div class="contents-link-box__sumally-wrapper">
+                <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
+              </div>
+            </div>
+            <div class="contents-link-box__box-wrapper">
+              <div class="contents-link-box__images-wrapper">
+                <a class="contents-link-box__link-wrapper" href="#">
+                  <p class="contents-link-box__contents-title">盆栽と人</p>
+                  <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+                </a>
+              </div>
+              <div class="contents-link-box__sumally-wrapper">
+                <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
+              </div>
+            </div>
+          </div>
+          <div class="contents-link-box__wrapper">
+            <div class="contents-link-box__box-wrapper">
+              <div class="contents-link-box__images-wrapper">
+                <a class="contents-link-box__link-wrapper" href="#">
+                  <p class="contents-link-box__contents-title">盆栽と人</p>
+                  <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+                </a>
+              </div>
+              <div class="contents-link-box__sumally-wrapper">
+                <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
+              </div>
+            </div>
+            <div class="contents-link-box__box-wrapper">
+              <div class="contents-link-box__images-wrapper">
+                <a class="contents-link-box__link-wrapper" href="#">
+                  <p class="contents-link-box__contents-title">盆栽と人</p>
+                  <img class="contents-link-box__contents-images" src="https://placehold.jp/660x413.png">
+                </a>
+              </div>
+              <div class="contents-link-box__sumally-wrapper">
+                <p class="contents-link-box__contents-sumally">世の中の「盆栽」のイメージは、特別なものになり過ぎかもしれない。こと高松盆栽は、暮らしのすぐ近くにある。通学路の横に松の苗が植わり、ごく普通に盆栽が部屋を飾る。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- contents-link-box / end -->
+      </div>
     </aside>
     <footer class="footer">
       <div class="footer__social-box">
