fix｜contents、contents-wrapper｜contentsの調整

--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -28,8 +28,8 @@
     <div class="header__shopping-bag"><a href="#"><img src="../dist/images/common/icn_shopping-bag.svg"></a></div>
   </header>
   <!-- article / start -->
-  <div class="contents-wrapper">
-    <article class="flex contents">
+  <div class="contents">
+    <article class="contents__article-wrapper flex">
       <!-- people-title / start -->
       <div class="people-title offset-3 col-9">
         <h2 class="people-title__category-title">盆栽と人</h2>
