update｜article-right-images｜images-sを追加

--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -99,6 +99,10 @@
         </div>
         <div class="article-right-image__image-box">
           <img class="article-right-image__image-m" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_004.png">
+          <div class="article-right-image__image-s-box">
+            <img class="article-right-image__image-s" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_005.png">
+            <img class="article-right-image__image-s" src="../dist/images/bonsai-and-people/hanazawa-takahito/pic_006.png">
+          </div>
         </div>
       </div>
       <!-- article-right-image / end -->
