--- a/components.html
+++ b/components.html
@@ -199,6 +199,10 @@
         </div>
         <div class="article-right-image__image-box">
           <img class="article-right-image__image-m" src="https://placehold.jp/480x385.png">
+          <div class="article-right-image__image-s-box">
+            <img class="article-right-image__image-s" src="https://placehold.jp/230x192.png">
+            <img class="article-right-image__image-s" src="https://placehold.jp/230x192.png">
+          </div>
         </div>
       </div>
       <!-- article-right-image / end -->
