fix｜article-xxx-image｜__textのpにmargin-bottom追加

--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -57,9 +57,9 @@
         </div>
         <div class="article-left-image__text-box">
           <p class="article-left-image__text">「こういう撮影のたんびにカメラマンさんに「笑顔で」って言われるけど、そんなん笑えんよね。頭の後ろにクイズのあれみたいに“ピコーン”ってなるヤツを付けてよっていうんやけど」
-          <br>撮影現場が笑いに包まれる。いや、おっしゃることはしごく当然である。当然なのだが、取材者としてはこんな思いが頭をもたげてしまう。この人、メンドクサイ人かも…
-          <br>—
-          <br>花澤登人（はなざわ・たかひと）さんは、祖父の代から続く花澤明春園（はなざわみょうしゅんえん）の3代目。今年（2019年）62歳になるというが、180センチを超える痩身、背筋のピンと伸びた立ち姿が年齢を感じさせない。
+          <br>撮影現場が笑いに包まれる。いや、おっしゃることはしごく当然である。当然なのだが、取材者としてはこんな思いが頭をもたげてしまう。この人、メンドクサイ人かも…</p>
+          <p class="article-left-image__text">—</p>
+          <p class="article-left-image__text">花澤登人（はなざわ・たかひと）さんは、祖父の代から続く花澤明春園（はなざわみょうしゅんえん）の3代目。今年（2019年）62歳になるというが、180センチを超える痩身、背筋のピンと伸びた立ち姿が年齢を感じさせない。
           <br>短く刈り込んだ銀髪に鋭い眼光。まさに職人。半端な質問をすると怒られそうだ。ここは桃太郎伝説があり、鬼のいない街、鬼無町だけど、花澤さんが「盆栽の鬼」だったらどうしよう。
           <br>とはいえインタビューを始めなくては。盆栽の剪定を始めた花澤さんに話を向ける。どうして今の仕事に就いたのですか？
           <br>「家業だから。ただそれだけです」バチン！ドサッ。幹近くまで深く切られた枝が落ちる…もう何も言えない。</p>
