update｜footer｜pc版途中まで追加

--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -294,6 +294,7 @@
         <!-- contents-link-box / end -->
       </div>
     </aside>
+    <p><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
@@ -301,10 +302,129 @@
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_facebook.svg" src="#"></a>
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_twitter.svg" src="#"></a>
       </div>
+      <div class="footer-link-area">
+        <div class="footer-link-area__box-wrapper">
+          <ul>
+            <li class="footer-link-area__main-menu"><a href="#">トップページ</a></li>
+            <li class="footer-link-area__main-menu"><a href="#">商品一覧</a></li>
+            <li class="footer-link-area__main-menu"><a href="#">盆栽と人</a></li>
+            <li class="footer-link-area__main-menu"><a href="#">BONについて</a></li>
+            <li class="footer-link-area__main-menu"><a href="#">会員登録</a></li>
+            <li class="footer-link-area__main-menu"><a href="#">ログイン</a></li>
+          <ul>
+        </div>
+        <div class="footer-link-area__box-wrapper">
+          <p class="footer-link-area__main-menu"><a href="#">香川県の盆栽園</a></p>
+          <ul>
+            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">花澤明春園</a></li>
+          <ul>
+        </div>
+        <div class="footer-link-area__box-wrapper">
+          <p class="footer-link-area__main-menu"><a href="#">盆栽の基礎知識</a></p>
+          <ul>
+            <li class="footer-link-area__local-menu"><a href="#">日本各地の盆栽園</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">初めての盆栽</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">盆栽の選び方</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">盆栽の道具</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">室内で楽しむ盆栽</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">季節を楽しむ盆栽</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">海外で人気のBONSAI</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">盆栽の歴史</a></li>
+          <ul>
+        </div>
+        <div class="footer-link-area__box-wrapper">
+          <p class="footer-link-area__main-menu"><a href="#">盆栽の育て方</a></p>
+          <ul>
+            <li class="footer-link-area__local-menu"><a href="#">剪定の方法、時期</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">用土の作り方</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">水やり</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">置き場所</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">肥料のやり方、時期</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">植え替えの方法</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">挿し木の方法</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">接ぎ木の方法</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">枯れる原因と対処法</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">月ごとの手入れ</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">樹種別の手入れ、育て方</a></li>
+          <ul>
+        </div>
+        <div class="footer-link-area__box-wrapper">
+          <p class="footer-link-area__main-menu"><a href="#">盆栽用語辞典</a></p>
+          <ul>
+            <li class="footer-link-area__local-menu"><a href="#">あ行</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">か行</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">さ行</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">た行</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">な行</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">は行</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">ま行</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">や行</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">ら行</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">わ行</a></li>
+          <ul>
+        </div>
+        <div class="footer-link-area__box-wrapper">
+          <p class="footer-link-area__main-menu"><a href="#">ショッピングガイド</a></p>
+          <ul>
+            <li class="footer-link-area__local-menu"><a href="#">商品のご注文について</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">お支払い方法について</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">配送・送料について</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">盆栽の梱包・箱詰めについて</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">注文の取消・返品について</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">会員登録、退会について</a></li>
+            <li class="footer-link-area__local-menu"><a href="#">商品説明について</a></li>
+          <ul>
+        </div>
+        <div class="footer-link-area__box-wrapper">
+          <ul>
+            <li class="footer-link-area__main-menu"><a href="#">特定商取引に関する<br>法律に基づく表記</a></li>
+            <li class="footer-link-area__main-menu"><a href="#">お問い合わせ</a></li>
+            <li class="footer-link-area__main-menu"><a href="#">プライバシーポリシー</a></li>
+            <li class="footer-link-area__main-menu"><a href="#">サイトマップ</a></li>
+          <ul>
+        </div>
+      </div>
       <p class="footer__pagetop"><a href="#">page top</a></p>
       <p class="footer__copyright">© 2019 bon - bonsai to hito - all rights reserved.</p>
     </footer>
   </div>
 <script src="../dist/js/main.min.js"></script>
+<!--
+<script src="../dist/js/lib/simpleParallax.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script>
+$(function(){
+$('.thumbnail').simpleParallax();
+});
+</script>
+<script>
+$(function(){
+  function animation(){
+    $('.fade-in').each(function(){
+      //ターゲットの位置を取得
+      var target = $(this).offset().top;
+      //スクロール量を取得
+      var scroll = $(window).scrollTop();
+      //ウィンドウの高さを取得
+      var windowHeight = $(window).height();
+      //ターゲットまでスクロールするとフェードインする
+      if (scroll > target - windowHeight){
+        $(this).css('opacity','1');
+        $(this).css('transform','translateY(0)');
+      }
+    });
+  }
+  animation();
+  $(window).scroll(function (){
+    animation();
+  });
+});
+</script>
+-->
 </body>
 </html>
