--- a/components.html
+++ b/components.html
@@ -591,12 +591,90 @@
       </div>
       <!-- contents-link-box / end -->
     </aside>
+    <p><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん
     <footer class="footer">
       <div class="footer__social-box">
-        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_youtube.svg" src="#"></a>
-        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_insta.svg" src="#"></a>
-        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_facebook.svg" src="#"></a>
-        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_twitter.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_insta.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_facebook.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_twitter.svg" src="#"></a>
+      </div>
+      <div class="footer__link-box">
+        <div class="footer__link-wrapper">
+          <ul>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+          <ul>
+        </div>
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
+          <ul>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+          <ul>
+        </div>
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
+          <ul>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+          <ul>
+        </div>
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
+          <ul>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+          <ul>
+        </div>
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
+          <ul>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+          <ul>
+        </div>
+        <div class="footer__link-wrapper">
+          <p><a href="#">あああああ</a></p>
+          <ul>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+            <li><a href="#">いいいいい</a></li>
+          <ul>
+        </div>
+        <div class="footer__link-wrapper">
+          <ul>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+            <li><a href="#">あああああ</a></li>
+          <ul>
+        </div>
       </div>
       <p class="footer__pagetop"><a href="#">page top</a></p>
       <p class="footer__copyright">© 2019 bon - bonsai to hito - all rights reserved.</p>
