update｜footer｜ロゴ等追加

--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -294,7 +294,7 @@
         <!-- contents-link-box / end -->
       </div>
     </aside>
-    <p><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん
+    <p class="breadcrumbs offset-2 col-9"><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん</p>
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
@@ -390,6 +390,9 @@
         </div>
       </div>
       <p class="footer__pagetop"><a href="#">page top</a></p>
+      <div class="footer__site-logo">
+        <img src="../dist/images/common/site-logo.png">
+      </div>
       <p class="footer__copyright">© 2019 bon - bonsai to hito - all rights reserved.</p>
     </footer>
   </div>
