--- a/components.html
+++ b/components.html
@@ -350,6 +350,7 @@
       </div>
     </article>
     <aside class="flex contents">
+      <div class="aside__area-wrapper">
       <!-- text-list-link-box / end -->
       <div class="row">
         <div class="col-1">col-1</div>
