update｜footer｜sp版を追加

--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -382,7 +382,7 @@
         </div>
         <div class="footer-link-area__box-wrapper">
           <ul>
-            <li class="footer-link-area__main-menu"><a href="#">特定商取引に関する<br>法律に基づく表記</a></li>
+            <li class="footer-link-area__main-menu"><a href="#">特定商取引に関する<br class="footer-link-area__br--pc">法律に基づく表記</a></li>
             <li class="footer-link-area__main-menu"><a href="#">お問い合わせ</a></li>
             <li class="footer-link-area__main-menu"><a href="#">プライバシーポリシー</a></li>
             <li class="footer-link-area__main-menu"><a href="#">サイトマップ</a></li>
