fix｜header｜ロゴ周り調整

--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -8,7 +8,9 @@
 </head>
 <body class="body-wrapper">
   <header class="header">
-    <h1 class="header__site-logo"><a href="#"><img src="../dist/images/common/site-logo.png"></a></h1>
+    <h1 class="header__site-logo">
+      <a href="#"><img src="../dist/images/common/site-logo.png"></a>
+    </h1>
     <!-- menu / start -->
     <div class="drawer">
     	<input class="drawer__checkbox" id="drawerCheckbox" type="checkbox" >
@@ -25,7 +27,11 @@
     	</nav>
     </div>
     <!-- menu / end -->
-    <div class="header__shopping-bag"><a href="#"><img src="../dist/images/common/icn_shopping-bag.svg"></a></div>
+    <div class="header__shopping-bag">
+      <a href="#">
+        <img src="../dist/images/common/icn_shopping-bag.svg">
+      </a>
+    </div>
   </header>
   <!-- article / start -->
   <div class="contents">
