--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -300,7 +300,9 @@
         <!-- contents-link-box / end -->
       </div>
     </aside>
-    <p class="breadcrumbs offset-2 col-9"><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん</p>
+    <div class="breadcrumbs">
+      <p class="breadcrumbs__text"><a href="#">TOP</a>  > <a href="#">盆栽と人</a> > 花澤明春園／花澤登人さん</p>
+    </div>
     <footer class="footer">
       <div class="footer__social-box">
         <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
@@ -403,37 +405,5 @@
     </footer>
   </div>
 <script src="../dist/js/main.min.js"></script>
-<!--
-<script src="../dist/js/lib/simpleParallax.js"></script>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script>
-$(function(){
-$('.thumbnail').simpleParallax();
-});
-</script>
-<script>
-$(function(){
-  function animation(){
-    $('.fade-in').each(function(){
-      //ターゲットの位置を取得
-      var target = $(this).offset().top;
-      //スクロール量を取得
-      var scroll = $(window).scrollTop();
-      //ウィンドウの高さを取得
-      var windowHeight = $(window).height();
-      //ターゲットまでスクロールするとフェードインする
-      if (scroll > target - windowHeight){
-        $(this).css('opacity','1');
-        $(this).css('transform','translateY(0)');
-      }
-    });
-  }
-  animation();
-  $(window).scroll(function (){
-    animation();
-  });
-});
-</script>
--->
 </body>
 </html>
