fix｜compone｜リンク切れを修正

--- a/components.html
+++ b/components.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BON - Component一覧</title>
-    <link rel="stylesheet" href="../dist/css/main.min.css">
+    <link rel="stylesheet" href="./dist/css/main.min.css">
 </head>
 <body class="body-wrapper">
   <header class="header">
     <h1 class="header__site-logo">
-      <a href="#"><img src="../dist/images/common/site-logo.png"></a>
+      <a href="#"><img src="./dist/images/common/site-logo.png"></a>
     </h1>
     <!-- menu / start -->
     <div class="drawer">
@@ -29,7 +29,7 @@
     <!-- menu / end -->
     <div class="header__shopping-bag">
       <a href="#">
-        <img src="../dist/images/common/icn_shopping-bag.svg">
+        <img src="./dist/images/common/icn_shopping-bag.svg">
       </a>
     </div>
   </header>
@@ -603,10 +603,10 @@
     </div>
     <footer class="footer">
       <div class="footer__social-box">
-        <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_youtube.svg" src="#"></a>
-        <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_insta.svg" src="#"></a>
-        <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_facebook.svg" src="#"></a>
-        <a href="/"><img class="footer__social-icon" src="../dist/images/common/icn_twitter.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_youtube.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_insta.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_facebook.svg" src="#"></a>
+        <a href="/"><img class="footer__social-icon" src="./dist/images/common/icn_twitter.svg" src="#"></a>
       </div>
       <div class="footer-link-area">
         <div class="footer-link-area__box-wrapper">
@@ -697,11 +697,11 @@
       </div>
       <p class="footer__pagetop"><a href="#">page top</a></p>
       <div class="footer__site-logo">
-        <img src="../dist/images/common/site-logo.png">
+        <img src="./dist/images/common/site-logo.png">
       </div>
       <p class="footer__copyright">© 2019 bon - bonsai to hito - all rights reserved.</p>
     </footer>
   </div>
-<script src="../dist/js/main.min.js"></script>
+<script src="./dist/js/main.min.js"></script>
 </body>
 </html>
