update｜compne｜row-tableを追加

--- a/components_old.html
+++ b/components_old.html
@@ -277,6 +277,30 @@
         <div class="col-1">col-1</div>
         <div class="col-1">col-1</div>
       </div>
+      <!-- row-table / start -->
+      <table class="row-table offset-4 col-6">
+        <tr class="row-table__tr">
+          <td class="row-table__td--heading">園号</td>
+          <td class="row-table__td">花澤明春園</td>
+        </tr>
+        <tr class="row-table__tr">
+          <td class="row-table__td--heading">住所</td>
+          <td class="row-table__td"><a href="#">香川県高松市鬼無町鬼無748-3</a>（JR鬼無駅より車で3分）　※無料駐車場完備</td>
+        </tr>
+        <tr class="row-table__tr">
+          <td class="row-table__td--heading">電話番号</td>
+          <td class="row-table__td">087-881-2847</td>
+        </tr>
+        <tr class="row-table__tr">
+          <td class="row-table__td--heading">URL</td>
+          <td class="row-table__td"><a href="#">http://www.hanazawa-bonsai.com/</a></td>
+        </tr>
+        <tr class="row-table__tr">
+          <td class="row-table__td--heading">取扱樹種</td>
+          <td class="row-table__td">ああああああ、ああああああ、ああああああ、ああああああ、ああああああ</td>
+        </tr>
+      </table>
+      <!-- row-table / end -->
       <!-- text-link-box / start -->
       <ul class="text-link-box offset-3 col-8">
         <li class="text-link-box__wrapper">
