fix｜footer-link、footer｜行頭調整、copyright調整

--- a/components.html
+++ b/components.html
@@ -723,7 +723,7 @@
       <div class="footer__site-logo">
         <img src="./dist/images/common/site-logo.png">
       </div>
-      <p class="footer__copyright">© 2019 bon - bonsai to hito - all rights reserved.</p>
+      <p class="footer__copyright">© 2019 bon all rights reserved.</p>
     </footer>
   </div>
 <script src="./dist/js/main.min.js"></script>
