fix｜content-link-box｜改行など調整

--- a/bonsai-and-people/hanazawa-takahito.html
+++ b/bonsai-and-people/hanazawa-takahito.html
@@ -252,7 +252,7 @@
             <div class="contents-link-box__box-wrapper">
               <div class="contents-link-box__images-wrapper">
                 <a class="contents-link-box__link-wrapper" href="#">
-                  <p class="contents-link-box__contents-title">香川県の盆栽園</p>
+                  <p class="contents-link-box__contents-title">香川県の<br class="contents-link-box__br">盆栽園</p>
                   <img class="contents-link-box__contents-images" src="../dist/images/common/pic_cont_001.png">
                 </a>
               </div>
@@ -263,7 +263,7 @@
             <div class="contents-link-box__box-wrapper">
               <div class="contents-link-box__images-wrapper">
                 <a class="contents-link-box__link-wrapper" href="#">
-                  <p class="contents-link-box__contents-title">盆栽の基礎知識</p>
+                  <p class="contents-link-box__contents-title">盆栽の<br class="contents-link-box__br">基礎知識</p>
                   <img class="contents-link-box__contents-images" src="../dist/images/common/pic_cont_002.png">
                 </a>
               </div>
@@ -276,7 +276,7 @@
             <div class="contents-link-box__box-wrapper">
               <div class="contents-link-box__images-wrapper">
                 <a class="contents-link-box__link-wrapper" href="#">
-                  <p class="contents-link-box__contents-title">盆栽の育て方</p>
+                  <p class="contents-link-box__contents-title">盆栽の<br class="contents-link-box__br">育て方</p>
                   <img class="contents-link-box__contents-images" src="../dist/images/common/pic_cont_003.png">
                 </a>
               </div>
@@ -287,7 +287,7 @@
             <div class="contents-link-box__box-wrapper">
               <div class="contents-link-box__images-wrapper">
                 <a class="contents-link-box__link-wrapper" href="#">
-                  <p class="contents-link-box__contents-title">盆栽用語辞典</p>
+                  <p class="contents-link-box__contents-title">盆栽<br class="contents-link-box__br">用語辞典</p>
                   <img class="contents-link-box__contents-images" src="../dist/images/common/pic_cont_004.png">
                 </a>
               </div>
