update｜複数｜ページの追加

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <link rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
-    <ul style="padding: 50px; ">
-      <li style="margin-bottom: 20px;"><a href="./components.html">component一覧</a></li>
-      <li style="margin-bottom: 20px;"><a href="./bonsai-and-people/hanazawa-takahito.html">花澤明春園／花澤登人さん</a></li>
-    </ul>
+  <ul style="padding: 50px; ">
+    <li style="margin-bottom: 20px;"><a href="./components.html">component一覧</a></li>
+    <li style="margin-bottom: 20px;"><a href="./bonsai-and-people/index.html">盆栽と人</a></li>
+    <li style="margin-bottom: 20px;"><a href="./bonsai-and-people/xxxxx.html">盆栽と人＞詳細</a></li>
+    <li style="margin-bottom: 20px;"><a href="./bonsai-garden/index.html">香川県の盆栽園</a></li>
+    <li style="margin-bottom: 20px;"><a href="./bonsai-garden/xxxxx.html">香川県の盆栽園＞詳細</a></li>
+    <li style="margin-bottom: 20px;"><a href="./knowledge/index.html">盆栽の基礎知識</a></li>
+    <li style="margin-bottom: 20px;"><a href="./knowledge/xxxxx.html">盆栽の基礎知識＞詳細</a></li>
+    <li style="margin-bottom: 20px;">盆栽の育て方</li>
+    <li style="margin-bottom: 20px;">盆栽の育て方＞詳細</li>
+    <li style="margin-bottom: 20px;">盆栽の用語辞典</li>
+    <li style="margin-bottom: 20px;">盆栽の用語辞典＞詳細</li>
+    <li style="margin-bottom: 20px;">BONについて</li>
+    <li style="margin-bottom: 20px;">お知らせ</li>
+    <li style="margin-bottom: 20px;">お知らせ＞詳細</li>
+  </ul>
 </body>
 </html>
