--- a/bonsai-and-people/xxxxx.html
+++ b/bonsai-and-people/xxxxx.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BON - Component一覧</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>盆栽は、楽しいもの、盆栽は、みんなのもの。（花澤明春園／花澤登人さん）｜BON</title>
     <link rel="stylesheet" href="../dist/css/main.min.css">
 </head>
 <body class="body-wrapper">
