--- a/components.html
+++ b/components.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BON - Component一覧</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Component一覧｜BON</title>
     <link rel="stylesheet" href="./dist/css/main.min.css">
 </head>
 <body class="body-wrapper">
