update｜複数｜ページを追加

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Sample</title>
     <link rel="stylesheet" href="./dist/css/main.css">
 </head>
@@ -17,11 +18,12 @@
     <li style="margin-bottom: 20px;"><a href="./bonsai-garden/xxxxx.html">香川県の盆栽園＞詳細</a></li>
     <li style="margin-bottom: 20px;"><a href="./knowledge/index.html">盆栽の基礎知識</a></li>
     <li style="margin-bottom: 20px;"><a href="./knowledge/xxxxx.html">盆栽の基礎知識＞詳細</a></li>
-    <li style="margin-bottom: 20px;">盆栽の育て方</li>
-    <li style="margin-bottom: 20px;">盆栽の育て方＞詳細</li>
-    <li style="margin-bottom: 20px;">盆栽の用語辞典</li>
-    <li style="margin-bottom: 20px;">盆栽の用語辞典＞詳細</li>
-    <li style="margin-bottom: 20px;">BONについて</li>
+    <li style="margin-bottom: 20px;"><a href="./how-to/index.html">盆栽の育て方</a></li>
+    <li style="margin-bottom: 20px;"><a href="./how-to/tree-type/index.html">盆栽の育て方＞樹種別の手入れ、育て方</a></li>
+    <li style="margin-bottom: 20px;"><a href="./how-to/tree-type/xxxxx.html">盆栽の育て方＞樹種別の手入れ、育て方＞詳細</a></li>
+    <li style="margin-bottom: 20px;"><a href="./glossary/index.html">盆栽の用語辞典</a></li>
+    <li style="margin-bottom: 20px;"><a href="./glossary/xxxxx.html">盆栽の用語辞典＞詳細</a></li>
+    <li style="margin-bottom: 20px;"><a href="./about/index.html">BONについて</a></li>
     <li style="margin-bottom: 20px;">お知らせ</li>
     <li style="margin-bottom: 20px;">お知らせ＞詳細</li>
   </ul>
